make suggested changes